--- a/style.css
+++ b/style.css
@@ -993,3 +993,18 @@ body {
   backface-visibility: hidden;
 }
 
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+/* Meida Query: Tablet or Smaller */
+@media screen and (max-width: 1000px){
+  .quote-container{
+    margin: auto 10px;
+  }
+
+  .quote-text {
+    font-size: 2.5rem;
+  }
+}
